--- a/maquetacion_alejandra/crearTareasProfesor.html
+++ b/maquetacion_alejandra/crearTareasProfesor.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/crearTareasProfesor.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> <!-- Agregamos Bootstrap -->
     <link rel="icon" href="img/icono.png">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Crear tarea</title>
@@ -13,108 +13,89 @@
 <body>
     <div class="contenedor">
 
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-            <div class="container">
-                <img src="/maquetacion_alejandra/img/logo.png" alt="Logo" class="navbar-brand" style="width: 100px;"> <!-- Logo -->
-                <div class="navbar-brand text-white">EduMultiPro</div>
-                <div class="navbar-text text-white">Tu Aliado en el camino educativo</div>
-            </div>
-        </nav>
-
-        <!-- Main Content -->
-        <article class="container mt-4">
-            <div class="d-flex justify-content-between align-items-center mb-4">
-                <div class="icono d-flex align-items-center">
-                    <div class="img-container">
-                        <img src="/maquetacion_alejandra/img/f10.png" id="salir"  class="img-fluid mx-2 class="mr-2" style="width: 40px;"> <!-- Icono de salir -->
-                        <img src="/maquetacion_alejandra/img/f9.png"  class="img-fluid mx-2 class="mr-2" style="width: 40px;"> <!-- Icono de tarea -->
-                    </div>
-                    
-                    <p class="ml-2">Tarea</p>
-                </div>
-                <button type="submit" id="crear" class="btn btn-success">Crear Tarea</button>
-            </div>
-
+        <div class="container-fluid" id="navegador">
             <div class="row">
-                <!-- Parte izquierda -->
-                <div class="col-md-6">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <h5 class="card-title">Asignar A</h5>
-                            <button type="submit" class="btn btn-secondary mb-3">Toda la clase</button>
-                            <div class="form-group">
-                                <label for="puntos">Puntos</label>
-                                <input type="number" placeholder="Puntos" id="puntos" name="puntos" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="fecha">Fecha Entrega</label>
-                                <input type="date" id="fecha" name="fecha" class="form-control">
-                            </div>
-                            <div class="form-group d-flex align-items-center">
-                                <select class="form-control mr-2">
-                                    <option value="">Si</option>
-                                    <option value="">No</option>
-                                </select>
-                                <p class="mb-0">Cerrar entregas después de la fecha límite</p>
-                            </div>
-                            <div class="form-group">
-                                <label for="tema">Tema</label>
-                                <input type="text" placeholder="Tema" id="tema" name="tema" class="form-control">
-                            </div>
-                        </div>
-                    </div>
+              <div class="col-12 col-sm-12 col-md-3 col-lg-2 col-xl-2 col-xxl-2" id="n1">
+      
+                <div class="d-flex justify-content-end my-lg-2 px-lg-4">
+                  <img class="img-fluid" src="img/logo.png" alt="" id="img1">
                 </div>
+              </div>
+              <div class="col-12 col-sm-12 col-md-9 col-lg-4 col-xl-4 col-xxl-4 d-flex justify-content-start align-items-center" id="n2">
+                  <h1 class="text-white">EduMultiPro</h1>
+              </div>
+              <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6 d-flex justify-content-center align-items-center" id="n3">
+                <div class="">
+                  <h3>Tu Aliado En El Camino Educativo</h3>
+                </div>
+              </div>
+            </div>
+          </div>
 
-                <!-- Parte derecha -->
-                <div class="col-md-6">
-                    <div class="form-group mb-4">
-                        <label for="titulo">Título</label>
-                        <input type="text" name="titulo" id="titulo" placeholder="Título" class="form-control">
-                    </div>
-                    <div class="form-group mb-4">
-                        <label for="desc">Descripción</label>
-                        <input type="text" name="desc" id="desc" placeholder="Descripción" class="form-control">
-                    </div>
-                    <div class="mb-4">
-                        <h2>Adjuntar</h2>
-                        <div class="d-flex justify-content-center">
-                            <img src="img/f11.png" alt="" class="img-fluid mx-2" style="width: 20px; height: 40px;" >
-                            <img src="img/f12.png" alt="" class="img-fluid mx-2"style="width: 20px; height: 40px;"
+        <article>
+            <div class="parte1" class="container-fluid bg-primary" >
+                <div class="icono">
+                    <img src="img/f10.png" id="salir" alt="">
+                    <img src="img/f9.png" alt="">
+                    <p>Tarea</p>
+                </div>
+                <button type="submit" id="crear">Crear Tarea</button>
+            </div>
+   
+            <div class="parte container-fluid">
+                <div class="row">
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                        <div class="parte2">
+                        <p>Asignar A</p>
+                        <button type="submit">Toda la clase</button>
+                        <p>Puntos</p>
+                        <input type="number" placeholder="puntos" id="puntos" name="puntos">
+                        <p>Fecha Entrega</p>
+                        <input type="date" placeholder="fecha" id="fecha" name="fecha">
+                        <div class="op1">
+                            <select name="" id="">
+                                <option value="">Si</option>
+                                <option value="">No</option>
+                            </select>
+                            <p>Cerrar entregas después de la fecha límite</p>
+                        </div>
+                            <p>Tema</p>
+                            <input type="text" placeholder="tema" id="tema" name="tema">
                         </div>
                     </div>
-                </div>
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">
+                        <div class="a2parte" clas="container">
+                            <div class="row">
+                                <div class="col-2 col-sm-2 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                                <div class="parte3">
+                                <input type="text" name="titulo" id="titulo" placeholder="Titulo">
+                                <input type="text" name="desc" id="desc" placeholder="Descripcion">
+                            </div>
+                            <div class="parte4">
+                                <h2>Adjuntar</h2>
+                                <div class="image">
+                                    <img src="img/f11.png" alt="">
+                                    <img src="img/f12.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        </div> 
+                     </div>   
+                </div>            
             </div>
         </article>
-
-        <!-- Footer -->
-        <footer class="bg-dark text-white text-center py-4">
-            <div class="informacion1">
-                <h2>Contactos</h2>
-            </div>
-            <div class="informacion2">
-                <a class="text-white" href="#">
-                    <i class="fa-solid fa-phone"></i> +546-160000
-                </a>
-                <a class="text-white" target="_blank" href="#">
-                    <i class="fa-brands fa-facebook"></i> EduMultipro_08
-                </a>
-                <a class="text-white" target="_blank" href="#">
-                    <i class="fa-brands fa-instagram"></i> EduMultipro_08
-                </a>
-                <a class="text-white" target="_blank" href="#">
-                    <i class="fa-regular fa-envelope"></i> Edu_Pro@gmail.com
-                </a>
-                <a class="text-white" target="_blank" href="#">
-                    <i class="fa-solid fa-globe"></i> EduMultiPro
-                </a>
-            </div>
-        </footer>
+        <!--Footer-->
+        <div class="container-fluid d-flex align-items-center" id="pie">
+      <div class="row w-100">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-2 col-xxl-2 d-flex justify-content-center align-items-center" id="n4"><h2>Contactos:</h2></div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-2 col-xxl-2 d-flex justify-content-center align-items-center" id="n5"><a><i class="fa-solid fa-phone "></i>+546-160000</a></div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-2 col-xxl-2 d-flex justify-content-center align-items-center" id="n6"><a target="_blank"><i class="fa-brands fa-facebook "></i>EduMultipro_08</a></div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-2 col-xxl-2 d-flex justify-content-center align-items-center" id="n7"><a target="_blank"><i class="fa-brands fa-instagram "></i>EduMultipro_08</a></div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-2 col-xxl-2 d-flex justify-content-center align-items-center" id="n8"><a target="_blank"><i class="fa-regular fa-envelope "></i>Edu_Pro@gmail.com</a></div>
+          <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-2 col-xxl-2 d-flex justify-content-center align-items-center" id="n9"><a target="_blank"><i class="fa-solid fa-globe "></i>EduMultiPro</a></div>
+      </div>
+    </div> 
     </div>
-
-    <!-- Bootstrap JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="../Profesor/js/8.js"></script>
 </body>
 </html>
